# urfu_LLM_Documents

./: .gitignore  .python-version  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.lock.txt  requirements.txt
config/: __init__.py  config.py
data/: BlockNames.json  merged.csv
docs/22/csv/: Еткуль, УСЗН, оп 1, п.хр.2021.csv  Миасс,_геологоразведочный_колледж,_оп_1_пост.csv  С_ОШИБКАМИ_Аша,_ОГВ_и_МСУ_Укского_сп,_ф_9,_о_5,пх_за_2022год.csv
document_checker/: __init__.py  main.py
document_checker/config/: config.py
document_checker/core/: __init__.py  document_checker.py  pdf_parser.py  reference_index.py
document_checker/tests/: test_embeddings_cache.py
document_checker/utils/: text_normalizer.py
lama 3.1/: FINAL_CLEANED_SP3.csv  classify_csv_with_ollama.py  llama_test.py  main.py  main_1.py  main_2.py  main_3.py  prompt.txt
lama 3.1/eight_verification/: eight_verification.py
lama 3.1/proverka8/: DocumentChecker.py  DocumentCheckerP.py  TextNormalizer.py
lama 3.1/second_verification/: FINAL_CLEANED_SP3.csv  NORMALIZED_SP1.csv  combined_SP.csv  old_version_test.py  second_verification.py
parser/: Dockerfile  pyproject.toml  requirements.txt  sp_preprocess.py
parser/src/app/: config.yaml
parser/src/app/api/: api_test.py  dbase.py  web_gui.py  web_main.py
parser/src/app/checker/utils/: list_utils.py  table_utils.py  text_utils.py
parser/src/app/data/test/: Статусы.xlsx
parser/src/app/data/work_docs/word/: Касли Больница оп 1 пост хр.doc  Касли Булзи оп 6 пост хр.docx  Касли Управление культуры оп 1 пост хр.doc
parser/src/app/static/: redoc.standalone.js
parser/src/app/test/: test.py  test_get_doc.py
proverka24/: DocumentChecker.py
proverka8/: Comparison.py  DocumentChecker.py  PDFParser.py  StreamLit.py
proverka8/data/: BlockNames.json
results/: results_20250621_213034.json  results_20250621_213136.json  results_20250622_000242.json  results_20250622_024407.json  results_20250622_024909.json  results_20250622_030336.json  results_20250622_030840.json  results_20250622_031310.json
scripts/: debug_embeddings.py
src/: __init__.py  main.py  stream_app.py
src/app/api/: main.py  utils.py  web_update1.py
src/app/checker/: checker.py  const.py
src/app/checker/utils/: file_utils.py
src/app/data/work_docs/word/: 1.doc
src/app/streamlit/: main.py
src/controllers/: __init__.py
src/models/: __init__.py
src/services/: __init__.py  document_checker.py  pdf_parser.py  reference_index.py
src/utilities/: __init__.py  text_normalizer.py
