[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document_checker"
version = "0.1.0"
description = "Система для проверки документов"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Roman Arhipov and Oleg Ankudinov"}
]
dependencies = [
    "sentence-transformers >= 2.2.2",
    "numpy>=1.24,<2.0",
    "pandas >= 1.5.0",
    "PyMuPDF >= 1.21.0",
    "faiss-cpu >= 1.7.4",
    "streamlit>=1.40.1",
    "torch==2.0.1",
    "transformers>=4.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-mock >= 3.10.0",
    "black >= 23.0.0",
    "ruff >= 0.0.270",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "N", "W", "D", "B", "C4"]
ignore = ["D203", "D213"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[project.scripts]
document-checker = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"] 
