[project]
name = "check2final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "faiss-cpu>=1.8.0.post1",
    "huggingface-hub<0.20",
    "numpy>=1.24.4",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "python-levenshtein>=0.25.1",
    "scikit-learn>=1.3.2",
    "sentence-transformers==2.2.2",
    "streamlit>=1.40.1",
    "torch==1.13.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
