[tool.poetry]
name = "documents"
version = "0.1.0"
description = ""
authors = ["Daniil Stafeev"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pypandoc = "^1.13"
tabula-py = "^2.9.3"
pytorch-crf = "^0.7.2"
python-docx = "^1.1.2"
fitz = "0.0.1.dev2"
pymupdf = "^1.24.5"
natasha = "1.6.0"
sentence-transformers = "^3.0.1"
nltk = "3.8.1"
openpyxl = "3.1.4"
pdfplumber = "0.11.2"
dateparser = "1.2.0"
streamlit = "^1.37.0"
accelerate = "0.34.2"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aiosignal = "1.3.1"
altair = "5.3.0"
altgraph = "0.17.4"
annotated-types = "0.7.0"
anyio = "4.4.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
async-lru = "2.0.4"
async-timeout = "4.0.3"
attrs = "23.2.0"
autocorrect = "2.6.1"
babel = "2.15.0"
beautifulsoup4 = "4.12.3"
bleach = "6.1.0"
blinker = "1.8.2"
blis = "0.7.11"
build = "1.2.1"
cachecontrol = "0.14.0"
cachetools = "5.4.0"
camelot-py = "0.11.0"
catalogue = "2.0.10"
certifi = "2024.6.2"
cffi = "1.16.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
ci-info = "0.3.0"
cleo = "2.1.0"
click = "8.1.7"
cloudpathlib = "0.19.0"
colorama = "0.4.6"
comm = "0.2.2"
confection = "0.1.5"
configobj = "5.0.8"
configparser = "7.0.0"
contourpy = "1.2.1"
crashtest = "0.4.1"
cryptography = "42.0.8"
cycler = "0.12.1"
cymem = "2.0.8"
datasets = "2.21.0"
datefinder = "0.7.3"
dawg-python = "0.7.2"
debugpy = "1.8.2"
decorator = "5.1.1"
defusedxml = "0.7.1"
dill = "0.3.8"
distlib = "0.3.8"
distro = "1.9.0"
docopt = "0.6.2"
dulwich = "0.21.7"
et-xmlfile = "1.1.0"
etelemetry = "0.3.1"
exceptiongroup = "1.2.1"
executing = "2.0.1"
fastapi = "0.112.2"
fastjsonschema = "2.20.0"
filelock = "3.15.1"
fonttools = "4.53.0"
fqdn = "1.5.1"
frozenlist = "1.4.1"
fsspec = "2024.6.0"
ghostscript = "0.7"
gitdb = "4.0.11"
gitpython = "3.1.43"
h11 = "0.14.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httpx = "0.27.0"
huggingface-hub = "0.23.4"
idna = "3.7"
importlib-metadata = "7.2.1"
installer = "0.7.0"
intel-openmp = "2021.4.0"
intervaltree = "3.1.0"
ipykernel = "6.29.4"
ipymarkup = "0.9.0"
ipython = "8.26.0"
isodate = "0.6.1"
isoduration = "20.11.0"
jaraco-classes = "3.4.0"
jedi = "0.19.1"
jinja2 = "3.1.4"
joblib = "1.4.2"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter-client = "8.6.2"
jupyter-core = "5.7.2"
jupyter-server = "2.14.1"
jupyter-server-terminals = "0.5.3"
jupyterlab = "4.2.3"
jupyterlab-pygments = "0.3.0"
jupyterlab-server = "2.27.2"
keyring = "24.3.1"
kiwisolver = "1.4.5"
langcodes = "3.4.0"
language-data = "1.2.0"
looseversion = "1.3.0"
lxml = "5.2.2"
marisa-trie = "1.2.0"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
matplotlib = "3.9.0"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mistune = "3.0.2"
mkl = "2021.4.0"
more-itertools = "10.3.0"
mpmath = "1.3.0"
msgpack = "1.0.8"
multidict = "6.0.5"
multiprocess = "0.70.16"
murmurhash = "1.0.10"
narwhals = "1.6.2"
navec = "0.10.0"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.3"
nibabel = "5.2.1"
nipype = "1.8.6"
notebook-shim = "0.2.4"
numpy = "1.26.4"
opencv-python = "4.10.0.84"
overrides = "7.7.0"
packaging = "24.1"
pandas = "2.2.2"
pandocfilters = "1.5.1"
parso = "0.8.4"
pathlib = "1.0.1"
pdfminer-six = "20231228"
pefile = "2023.2.7"
pexpect = "4.9.0"
pillow = "10.3.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
preshed = "3.0.9"
prometheus-client = "0.20.0"
prompt-toolkit = "3.0.47"
protobuf = "5.27.2"
prov = "2.0.0"
psutil = "6.0.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py-cpuinfo = "9.0.0"
pyarrow = "17.0.0"
pyaspeller = "2.0.0"
pycparser = "2.22"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pydeck = "0.9.1"
pydot = "2.0.0"
pygments = "2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
